robo_orchard/lab/0.4.0/_sources/autoapi/robo_orchard_lab/dataset/robot/db_orm/md5/index.rst.txt
md5
===

.. py:module:: robo_orchard_lab.dataset.robot.db_orm.md5


Attributes
----------

.. autoapisummary::

   robo_orchard_lab.dataset.robot.db_orm.md5.T
   robo_orchard_lab.dataset.robot.db_orm.md5.MD5_ORM_TYPE


Classes
-------

.. autoapisummary::

   robo_orchard_lab.dataset.robot.db_orm.md5.MD5FieldMixin
   robo_orchard_lab.dataset.robot.db_orm.md5.MD5ObjCache


Module Contents
---------------

.. py:data:: T

.. py:class:: MD5FieldMixin

   Bases: :py:obj:`Generic`\ [\ :py:obj:`T`\ ]


   Abstract base class for generic types.

   A generic type is typically declared by inheriting from
   this class parameterized with one or more type variables.
   For example, a generic mapping type might be defined as::

     class Mapping(Generic[KT, VT]):
         def __getitem__(self, key: KT) -> VT:
             ...
         # Etc.

   This class can then be used as follows::

     def lookup_name(mapping: Mapping[KT, VT], key: KT, default: VT) -> VT:
         try:
             return mapping[key]
         except KeyError:
             return default


   .. py:attribute:: md5
      :type:  sqlalchemy.orm.Mapped[bytes]


   .. py:method:: query_by_content_with_md5(session: sqlalchemy.orm.Session, cls: Type[T], **kwargs) -> T | None
      :staticmethod:


      Query an instance of the class by its content and MD5 hash.

      This method use the MD5 hash to filter results, and then checks
      if all provided keyword arguments match the attributes of the
      instance.




   .. py:method:: md5_content_fields() -> list[str]
      :classmethod:

      :abstractmethod:



   .. py:method:: calculate_md5() -> bytes
      :abstractmethod:


      Calculate the MD5 hash based on the content fields.



   .. py:method:: update_md5() -> bytes

      Update the MD5 hash based on the content fields.



.. py:data:: MD5_ORM_TYPE

.. py:class:: MD5ObjCache(check_column_names: list[str])

   Bases: :py:obj:`Generic`\ [\ :py:obj:`MD5_ORM_TYPE`\ ]


   A cache for ORM objects based on their MD5 hash and columns.


   .. py:method:: extend(objs: Iterable[MD5_ORM_TYPE]) -> None

      Extend the cache with a list of ORM objects.



   .. py:method:: find(obj: MD5_ORM_TYPE) -> MD5_ORM_TYPE | None

      Find an ORM object in the cache that matches the given object.



